# CMake_learn

./: CMakeLists.txt
helloworld/: CMakeLists.txt  README.md  run.py
helloworld/src/: main.c
helloworld_cpp/: CMakeLists.txt
helloworld_cpp/include/fmt/: chrono.h
helloworld_cpp/src/: bool_test.hpp  main.cc  point.hpp  static_data_members.hpp
library_demo/: CMakeLists.txt  README.md
library_demo/src/: Message.cpp
use_library_demo/: CMakeLists.txt  README.md
use_library_demo/lib/: Message.h
use_library_demo/src/: main.cpp
